--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "vue": "^2.1.10",
     "vue-resource": "^1.2.0",
     "vue-router": "^2.2.0",
-    "weui": "^1.1.1"
+    "weui.js": "^1.1.0"
   },
   "devDependencies": {
     "autoprefixer": "^6.7.2",
