--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "private": true,
   "scripts": {
     "dev": "node build/dev-server.js",
-    "build": "node build/build.js"
+    "build": "node build/build.js",
+    "pub": "node build/build.js && node build/pub.js"
   },
   "dependencies": {
     "vue": "^2.1.10",
@@ -23,6 +24,7 @@
     "babel-preset-stage-2": "^6.22.0",
     "babel-register": "^6.22.0",
     "chalk": "^1.1.3",
+    "compression-webpack-plugin": "^0.3.2",
     "connect-history-api-fallback": "^1.3.0",
     "css-loader": "^0.26.1",
     "eventsource-polyfill": "^0.9.6",
@@ -31,12 +33,14 @@
     "file-loader": "^0.10.0",
     "friendly-errors-webpack-plugin": "^1.1.3",
     "function-bind": "^1.1.0",
+    "glob": "^7.1.1",
     "html-webpack-plugin": "^2.28.0",
     "http-proxy-middleware": "^0.17.3",
     "json-loader": "^0.5.4",
     "opn": "^4.0.2",
     "ora": "^1.1.0",
     "sass-loader": "^5.0.1",
+    "scs-sdk": "^0.1.4",
     "scss": "^0.2.4",
     "semver": "^5.3.0",
     "shelljs": "^0.7.6",
