--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
   "scripts": {
     "dev": "node build/dev-server.js",
     "build": "node build/build.js",
-    "pub": "node build/build.js && node build/pub.js"
+    "pub": "node build/build.js && node build/pub.js",
+    "pub1": "node build/pub.js"
   },
   "dependencies": {
+    "less-loader": "^4.0.4",
     "vue": "^2.1.10",
     "vue-resource": "^1.2.0",
     "vue-router": "^2.2.0",
@@ -27,6 +29,7 @@
     "compression-webpack-plugin": "^0.3.2",
     "connect-history-api-fallback": "^1.3.0",
     "css-loader": "^0.26.1",
+    "eslint-friendly-formatter": "^3.0.0",
     "eventsource-polyfill": "^0.9.6",
     "express": "^4.14.1",
     "extract-text-webpack-plugin": "^2.0.0-rc.2",
@@ -39,6 +42,7 @@
     "json-loader": "^0.5.4",
     "opn": "^4.0.2",
     "ora": "^1.1.0",
+    "qiniu": "^7.0.4",
     "sass-loader": "^5.0.1",
     "scs-sdk": "^0.1.4",
     "scss": "^0.2.4",
@@ -46,6 +50,7 @@
     "shelljs": "^0.7.6",
     "url-loader": "^0.5.7",
     "vue-loader": "^10.3.0",
+    "qiniu": "^6.0.0",
     "vue-style-loader": "^2.0.0",
     "vue-template-compiler": "^2.1.10",
     "webpack": "^2.2.1",
