--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "pub1": "node build/pub.js"
   },
   "dependencies": {
-    "less-loader": "^4.0.4",
     "vue": "^2.1.10",
     "vue-resource": "^1.2.0",
     "vue-router": "^2.2.0",
@@ -40,9 +39,12 @@
     "html-webpack-plugin": "^2.28.0",
     "http-proxy-middleware": "^0.17.3",
     "json-loader": "^0.5.4",
+    "less": "^2.7.2",
+    "less-loader": "^4.0.4",
     "opn": "^4.0.2",
     "ora": "^1.1.0",
-    "qiniu": "^7.0.4",
+    "qiniu": "^6.0.0",
+    "node-sass": "^4.5.3",
     "sass-loader": "^5.0.1",
     "scs-sdk": "^0.1.4",
     "scss": "^0.2.4",
@@ -50,7 +52,6 @@
     "shelljs": "^0.7.6",
     "url-loader": "^0.5.7",
     "vue-loader": "^10.3.0",
-    "qiniu": "^6.0.0",
     "vue-style-loader": "^2.0.0",
     "vue-template-compiler": "^2.1.10",
     "webpack": "^2.2.1",
